test/Fail/Issue3147.err
Issue3147.agda:12.10-11: error: [UnequalTerms]
The terms
  x
and
  suc x
are not equal at type Nat
when checking that all occurrences of pattern variable x have the
same value
